AT-204 Memory tracking in startup performance tests
Add GC metrics to startup tests

GitOrigin-RevId: bc2c5de14ac33b6e4810f21b2009d7d10090ea04